crates/swc_ecma_parser/tests/test262-error-references/fail/858b72be7f8f19d7.js.stderr
error: Unexpected initializer in for in/of loop
 --> $DIR/tests/test262-parser/fail/858b72be7f8f19d7.js:1:9
  |
1 | for(let a = 0 of b);
  |         ^

